...
    fun select(id: String) {
        keyboard?.hide(); focus.clearFocus()
        model.select(id)
    }
    MapLayout(model, places, scopeId, save, modifier, mapSlow, appearance, bottomOverlay, unsave) { mapModifier, padding ->
        GoogleMap(
            modifier = mapModifier.testTag("google-map").onSizeChanged { mapSize = it }, cameraPositionState = camera,
            contentPadding = padding,
            properties = MapProperties(isMyLocationEnabled = false),
            uiSettings = MapUiSettings(myLocationButtonEnabled = false, mapToolbarEnabled = false),
            onMapLoaded = { mapLoaded = true },
            onPOIClick = { place -> select(place.placeId) },
        ) {
...
